--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </nav>
     <main>
         <div class="base"></div>
+        <div class="pegs">
+            <div class="peg one"></div>
+            <div class="peg two"></div>
+            <div class="peg three"></div>
+        </div>
     </main>
     <footer>
     </footer>
