--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <nav>
     </nav>
     <main>
-        <div class="base"></div>
         <div class="pegs">
-            <div class="peg one"></div>
-            <div class="peg two"></div>
-            <div class="peg three"></div>
+            <div class="peg" id="peg1">
+                <div class="ring" id="ring1"></div>
+                <div class="ring" id="ring2"></div>
+                <div class="ring" id="ring3"></div>
+            </div>
+            <div class="peg" id="peg2"></div>
+            <div class="peg" id="peg3"></div>
         </div>
+        <div class="base"></div>
     </main>
     <footer>
     </footer>
