createContainer method. Change container classes to ids

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     <nav>
     </nav>
     <main>
-        <div class="container container1">
-            <div class="peg" id="peg1"></div>
-            <div class="ring" id="ring3"></div>
-            <div class="ring" id="ring2"></div>
-            <div class="ring" id="ring1"></div>
-        </div>
-        <div class="container container2">
-            <div class="peg" id="peg2"></div>
-        </div>
-        <div class="container container3">
-            <div class="peg" id="peg3"></div>
-        </div>
+        <!-- <div class="containers"> -->
+            <div class="container" id="container1">
+                <div class="peg" id="peg1"></div>
+                <div class="ring" id="ring3"></div>
+                <div class="ring" id="ring2"></div>
+                <div class="ring" id="ring1"></div>
+            </div>
+            <div class="container" id="container2">
+                <div class="peg" id="peg2"></div>
+            </div>
+            <div class="container" id="container3">
+                <div class="peg" id="peg3"></div>
+            </div>
+        <!-- </div> -->
 
         <div class="base"></div>
     </main>
