Add containers to containers class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
     </nav>
     <main>
-        <!-- <div class="containers"> -->
+        <div class="containers">
             <div class="container" id="container1">
                 <div class="peg" id="peg1"></div>
                 <div class="ring" id="ring3"></div>
@@ -26,7 +26,7 @@
             <div class="container" id="container3">
                 <div class="peg" id="peg3"></div>
             </div>
-        <!-- </div> -->
+        </div>
 
         <div class="base"></div>
     </main>
