Create pegs and divs from JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
         <div class="containers">
-            <div class="container" id="container0">
+            <!-- <div class="container" id="container0">
                 <div class="peg" id="peg0"></div>
                 <div class="rings">
                     <div class="ring" id="ring2"></div>
@@ -29,7 +29,7 @@
             <div class="container" id="container2">
                 <div class="peg" id="peg2"></div>
                 <div class="rings"></div>
-            </div>
+            </div> -->
         </div>
 
         <div class="base"></div>
