--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h3>Timer:</h3>
             <p>0:00</p>
         </div>
-        <div class="top totalScore">
+        <div class="top score">
             <h2>Total Score:</h2>
-            <p>x000</p>
+            <p>0</p>
         </div>
-        <div class="top currentScore">
-            <h3>Total Score:</h3>
-            <p>x00</p>
+        <div class="top moves">
+            <h3>Total Moves:</h3>
+            <p>0</p>
         </div>
 
         <div class="containers"></div>
