--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
     <header>
         <h1>Tower of Hanoi</h1>
+        <!-- https://en.wikipedia.org/wiki/Tower_of_Hanoi -->
+        <div class="instructions">
+            <p>The objective of the puzzle is to move the entire stack to another rod, obeying the following simple rules:</p>
+            <ol>
+                <li>Only one disk can be moved at a time</li>
+                <li>Each move consists of taking the upper disk from one of the stacks and placing it on top of another stack or on an empty rod</li>
+                <li>No larger disk may be placed on top of a smaller disk</li>
+            </ol>
+        </div>
     </header>
     <nav>
     </nav>
@@ -41,6 +50,9 @@
         </div>
     </main>
     <footer>
+        <div class="instructions output">
+            <p></p>
+        </div>
     </footer>
     <script src="js/script.js"></script> 
 </body>
