Allow user to increase rings

--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
         <div class="base"></div>
 
         <div class="bottom reset">
-            <button id="resetButton">Reset</button>
+            <button rings=3>Reset Game at <strong>3 Rings</strong></button>
+            <button rings=5>Reset Game at <strong>5 Rings</strong></button>
+            <button rings=7>Reset Game at <strong>7 Rings</strong></button>
+            <!-- <button rings=9>Reset Game at <strong>9 Rings</strong></button> -->
         </div>
         <div class="bottom hint">
             <button id="hintButton">Hint</button>
         </div>
         <div class="bottom solve">
-            <button id="resetButton">Solve</button>
+            <button id="solveButton">Solve</button>
         </div>
     </main>
     <footer>
