Reset score button

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
 
         <div class="base"></div>
 
-        <div class="bottom reset">
+        <div class="bottom resetGame">
             <button rings=3>Reset Game at <strong>3 Rings</strong></button>
             <button rings=5>Reset Game at <strong>5 Rings</strong></button>
             <button rings=7>Reset Game at <strong>7 Rings</strong></button>
             <!-- <button rings=9>Reset Game at <strong>9 Rings</strong></button> -->
         </div>
-        <div class="bottom hint">
-            <button id="hintButton">Hint</button>
+        <div class="bottom resetScore">
+            <!-- <button id="hintButton">H/int</button> -->
+            <button>Reset Score</button>
         </div>
         <div class="bottom solve">
             <button id="solveButton">Solve</button>
