--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
         <div class="base"></div>
 
         <div class="bottom resetGame">
-            <button><div rings="3">Reset Game at <strong>3 Rings</strong></div></button>
-            <button><div rings="5">Reset Game at <strong>5 Rings</strong></div></button>
-            <button><div rings="7">Reset Game at <strong>7 Rings</strong></div></button>
-            <!-- <button><div rings="9">Reset Game at <strong>9 Rings</strong></div></button> -->
+            <div rings="3">
+                <button>Reset Game at <strong>3 Rings</strong></button>
+            </div>
+            <div rings="5">
+                <button>Reset Game at <strong>5 Rings</strong></button>
+            </div>
+            <div rings="7">
+                <button>Reset Game at <strong>7 Rings</strong></button>
+            </div>
+            <!-- <div rings="9">
+                <button>Reset Game at <strong>9 Rings</strong></button>
+            </div> -->
         </div>
         <div class="bottom resetScore">
             <!-- <button id="hintButton">H/int</button> -->
