HTML validator pt4

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <div class="base"></div>
 
         <div class="bottom resetGame">
-            <div rings="3">
+            <div data-rings="3">
                 <button>Reset Game at <strong>3 Rings</strong></button>
             </div>
-            <div rings="5">
+            <div data-rings="5">
                 <button>Reset Game at <strong>5 Rings</strong></button>
             </div>
-            <div rings="7">
+            <div data-rings="7">
                 <button>Reset Game at <strong>7 Rings</strong></button>
             </div>
-            <!-- <div rings="9">
+            <!-- <div data-rings="9">
                 <button>Reset Game at <strong>9 Rings</strong></button>
             </div> -->
         </div>
