Take the credit

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
     </main>
     <footer>
-        <div class="instructions output">
-            <p></p>
+        <div class="name">
+            <p>Created by: David Orona</p>
         </div>
     </footer>
     <script src="js/script.js"></script> 
